// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`builds index.css 1`] = `
"
"
`;

exports[`builds index.css 2`] = `
".foo{content:"bar"}
"
`;

exports[`builds index.js 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`builds panel plugins 1`] = `
"const e = { extends: "k-info-field" };
window.panel.plugin("kirbyup/test", {
  fields: {
    demo: e
  }
});
"
`;

exports[`compiles vue templates 1`] = `
"import { createElementBlock as r, openBlock as a, createElementVNode as c } from "vue";
const i = (o, e) => {
  const t = o.__vccOpts || o;
  for (const [n, s] of e)
    t[n] = s;
  return t;
}, d = {
  created() {
    console.log("created");
  }
}, l = { class: "k-demo-section" };
function p(o, e, t, n, s, m) {
  return a(), r("section", l, [...e[0] || (e[0] = [
    c(
      "header",
      { class: "k-section-header" },
      [
        c("h2", { class: "k-headline" }, "Custom section")
      ],
      -1
      /* CACHED */
    )
  ])]);
}
const _ = /* @__PURE__ */ i(d, [["render", p]]);
window.panel.plugin("kirbyup/test", {
  sections: {
    demo: _
  }
});
"
`;

exports[`supports built-in env variables 1`] = `
"const o = "production";
export {
  o as mode
};
"
`;

exports[`supports custom env variables 1`] = `
"const o = "bar";
export {
  o as foo
};
"
`;

exports[`supports kirbyup.config.js with function 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`supports kirbyup.config.js with object 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`supports resolve aliases 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;
